crates/markdown-neuraxis-syntax/src/snapshots/blocks/heading_setext_dash.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..30
  SETEXT_HEADING@0..30
    TEXT@0..5 "Level"
    WHITESPACE@5..6 " "
    TEXT@6..7 "2"
    WHITESPACE@7..8 " "
    TEXT@8..14 "Setext"
    NEWLINE@14..15 "\\n"
    DASH@15..16 "-"
    DASH@16..17 "-"
    DASH@17..18 "-"
    DASH@18..19 "-"
    DASH@19..20 "-"
    DASH@20..21 "-"
    DASH@21..22 "-"
    DASH@22..23 "-"
    DASH@23..24 "-"
    DASH@24..25 "-"
    DASH@25..26 "-"
    DASH@26..27 "-"
    DASH@27..28 "-"
    DASH@28..29 "-"
    NEWLINE@29..30 "\\n"
