crates/markdown-neuraxis-syntax/src/snapshots/blocks/heading_setext_equals.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..30
  SETEXT_HEADING@0..30
    TEXT@0..5 "Level"
    WHITESPACE@5..6 " "
    TEXT@6..7 "1"
    WHITESPACE@7..8 " "
    TEXT@8..14 "Setext"
    NEWLINE@14..15 "\\n"
    EQUALS@15..16 "="
    EQUALS@16..17 "="
    EQUALS@17..18 "="
    EQUALS@18..19 "="
    EQUALS@19..20 "="
    EQUALS@20..21 "="
    EQUALS@21..22 "="
    EQUALS@22..23 "="
    EQUALS@23..24 "="
    EQUALS@24..25 "="
    EQUALS@25..26 "="
    EQUALS@26..27 "="
    EQUALS@27..28 "="
    EQUALS@28..29 "="
    NEWLINE@29..30 "\\n"
