crates/markdown-neuraxis-syntax/src/snapshots/blocks/html_block.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..33
  HTML_BLOCK@0..33
    LT@0..1 "<"
    TEXT@1..4 "div"
    GT@4..5 ">"
    NEWLINE@5..6 "\\n"
    WHITESPACE@6..8 "  "
    TEXT@8..12 "HTML"
    WHITESPACE@12..13 " "
    TEXT@13..20 "content"
    WHITESPACE@20..21 " "
    TEXT@21..25 "here"
    NEWLINE@25..26 "\\n"
    LT@26..27 "<"
    TEXT@27..31 "/div"
    GT@31..32 ">"
    NEWLINE@32..33 "\\n"
